# ti-mspm0-libxr-dev

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  ti-mspm0-libxr-dev.syscfg  untitled.syscfg
src/: app_main.cpp  main.c
sysconfig/: ti_msp_dl_config.c  ti_msp_dl_config.h  untitled.syscfg
